--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>OCPL Logging</title>
+		<link rel="icon" type="image/x-icon" href="/public/assets/icon.png" />
 	</head>
 	<body>
 		<div id="app"></div>
